<resources>

    <string name="app_name">Product Catalog App</string>

    <string name="permission_message">Our application need Permission to access</string>

    <string name="hint_username_input">User name</string>
    <string name="hint_password_input">Password</string>

    <string name="text_save_session">Save your session</string>

    <string name="cart">Cart (%1$d, %2$.2f Dh)</string>

    <string name="dialog_client_info_hint_name">Enter client name</string>
    <string name="dialog_client_info_hint_address">Enter client address</string>
    <string name="dialog_client_info_hint_main_phone_number">Enter client main phone number</string>
    <string name="dialog_client_info_hint_second_phone_number">Enter client second phone number</string>
    <string name="dialog_client_info_button_create_command">create command</string>
    <string name="dialog_client_info_hint_email">Enter client email</string>
    <string name="dialog_client_info_hint_town">Enter client town</string>


    <string name="confirmation_logout_message">Are you sure you want to log out ? </string>
    <string name="confirmation_delete_message">Are you sure you want to delete this item ?</string>

    <string name="success_add">Item added successfully</string>
    <string name="success_command_sync">All commands are synchronized</string>

    <string name="error_from_server">Error from server</string>
    <string name="error_cart_is_empty">Cart is empty</string>
    <string name="error_you_are_not_connected">You are not connected</string>
    <string name="error_command_sync">All commands are already synchronized</string>
    <string name="error_name_required">Client full name required</string>
    <string name="error_town_required">Client town required</string>
    <string name="error_address_required">Client address required</string>
    <string name="error_main_phone_required">Client main phone number required</string>
    <string name="error_username_required">User name is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_invalid_fields">Invalid fields</string>




    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_back">Back</string>
    <string name="action_valid">Valid</string>
    <string name="action_delete">Delete</string>
    <string name="action_create_command">Create command</string>
    <string name="action_confirmation">Confirmation</string>
    <string name="action_accept">Accept</string>
    <string name="action_done">Done</string>
    <string name="action_loading">Loading ...</string>
    <string name="action_update">Update</string>
    <string name="action_syncing">We are syncing ...</string>
    <string name="action_sync_commands">Sync your commands</string>
    <string name="action_sync_products">Sync your products</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="text_description">Description : </string>
    <string name="text_total">Total : </string>
    <string name="text_items_count">%1$d Items</string>


</resources>