<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/idEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dialog_client_info_hint_name"
                    android:layout_marginRight="16dp"/>
                <EditText
                    android:id="@+id/idEditTextTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dialog_client_info_hint_town" />
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_marginBottom="16dp">
               <EditText
                   android:id="@+id/idEditTextAddress"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/dialog_client_info_hint_address"
                   android:layout_marginBottom="16dp"/>
               <EditText
                   android:id="@+id/idEditTextEmail"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:inputType="textEmailAddress"
                   android:hint="@string/dialog_client_info_hint_email"/>
           </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <EditText
                    android:id="@+id/idEditTextMainPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:hint="@string/dialog_client_info_hint_main_phone_number"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:id="@+id/idEditTextSecondPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:hint="@string/dialog_client_info_hint_second_phone_number"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>
            <Button
                android:id="@+id/idButtonCreateCommand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/action_create_command"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>