<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg_primary"
    android:gravity="center"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_lg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_md"
            android:layout_margin="@dimen/margin_md"
            android:background="@drawable/login_layout_card"
            android:elevation="8dp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/idEditTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hint_username_input"
                android:background="@drawable/login_layout_input"
                style="@style/login_input"
                />

            <EditText
                android:id="@+id/idEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password_input"
                android:background="@drawable/login_layout_input"
                style="@style/login_input"
                />
            <CheckBox
                android:id="@+id/idCheckBoxSaveSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_save_session"
                android:layout_marginLeft="1dp"
                android:textColor="@color/text_secondary"
                android:buttonTint="@color/text_primary"
                android:fontFamily="@font/roboto_regular"
                />

            <Button
                android:id="@+id/idButtonLogin"
                style="@style/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_layout_button"
                android:fontFamily="@font/roboto_bold"
                android:padding="10dp"
                android:text="@string/action_login"
                android:textColor="@color/text_secondary" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>