<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CatalogActivity"
    android:orientation="vertical"
    android:background="@color/bg_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="23dp"
        android:paddingVertical="@dimen/padding_sm"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/idButtonCart"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:textColor="@color/text_secondary"
                android:background="@drawable/login_layout_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/idButtonUpdateCommands"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/action_sync_commands"
                android:textColor="@color/text_secondary"
                android:background="@drawable/login_layout_button"/>
            <Button
                android:id="@+id/idButtonUpdate"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginRight="16dp"
                android:text="@string/action_sync_products"
                android:background="@drawable/login_layout_button"
                android:textColor="@color/text_secondary"
                />
            <Button
                android:id="@+id/idButtonLogout"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/action_logout"
                android:background="@drawable/login_layout_button"
                android:textColor="@color/text_secondary"
                />
        </LinearLayout>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:paddingBottom="20dp"
        android:paddingHorizontal="20dp"
        android:id="@+id/idRecyclerViewProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>