<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity"
    android:orientation="vertical"
    android:background="@color/bg_primary"
    android:padding="@dimen/padding_sm">
        <Button
            android:id="@+id/idButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/action_back"
            android:background="@drawable/cancel_button"
            android:textColor="@color/bg_secondary"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/idRecyclerViewCardProducts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingVertical="@dimen/padding_sm"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1.5"
            android:background="@drawable/login_layout_card"
            android:padding="@dimen/padding_sm"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="1"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/text_total"
                        android:textSize="16dp"
                        android:textColor="@color/text_primary"
                        android:layout_marginEnd="@dimen/margin_sm"
                        android:fontFamily="@font/roboto_bold">

                    </TextView>
                    <TextView
                        android:id="@+id/idTextViewTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="200"
                        android:fontFamily="@font/roboto_black"
                        android:textColor="@color/text_primary"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text=" Dh"
                        android:fontFamily="@font/roboto_black"
                        android:textColor="@color/text_success"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/idTextViewItemsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_secondary"
                    android:textSize="15dp"
                    android:text="3 items"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right|center"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/idButtonCreateCommand"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/action_create_command"
                    android:textColor="@color/text_secondary"
                    android:background="@drawable/login_layout_button"/>
            </LinearLayout>

        </LinearLayout>
</LinearLayout>